@@ -34,9 +34,9 @@ noCapitals=false
 normalizer=none
 gain=album
 gainTagsOnly=false
-metadataProvider=freedb
+metadataProvider=gnudb
 firstHit=true
-site=http://freedb.freedb.org/~cddb/cddb.cgi
+site=http://gnudb.gnudb.org/~cddb/cddb.cgi
 username=anonymous
 hostname=my_secret.com
 preferMusicBrainzCountries=US,UK,XW,XE,JP
