@@ -315,10 +315,10 @@ private
     @out.puts "*** " + _("METADATA PREFERENCES") + " ***"
     @out.puts ''
     @out.puts ' 1) ' + _("Metadata provider") + ": %s" % [@prefs.metadataProvider]
-    @out.puts ' 2) ' + _("Freedb use first hit %s") % [showBool(@prefs.firstHit)]
-    @out.puts ' 3) ' + _("Freedb server") + ": %s" % [@prefs.site]
-    @out.puts ' 4) ' + _("Freedb username") + ": %s" % [@prefs.username]
-    @out.puts ' 5) ' + _("Freedb hostname") + ": %s" % [@prefs.hostname]
+    @out.puts ' 2) ' + _("Gnudb use first hit %s") % [showBool(@prefs.firstHit)]
+    @out.puts ' 3) ' + _("Gnudb server") + ": %s" % [@prefs.site]
+    @out.puts ' 4) ' + _("Gnudb username") + ": %s" % [@prefs.username]
+    @out.puts ' 5) ' + _("Gnudb hostname") + ": %s" % [@prefs.hostname]
     @out.puts ' 6) ' + _("Musicbrainz preferred countries (1st, 2nd,...)") + ": %s" % [@prefs.preferMusicBrainzCountries]
     @out.puts ' 7) ' + _("Musicbrainz preferred date") + ": %s" % [@prefs.preferMusicBrainzDate]
     @out.puts ' 8) ' + _("Musicbrainz use first known year (including LPs) %s") % [showBool(@prefs.useEarliestDate)]
@@ -333,11 +333,11 @@ private
       when 99 then loopMainMenu()
       when 1 then setMetadataProvider()
       when 2 then switchBool('firstHit')
-      when 3 then @prefs.site = @string.get(_("Freedb server"),
-        'http://freedb.freedb.org/~cddb/cddb.cgi')
-      when 4 then @prefs.username = @string.get(_("Freedb username"),
+      when 3 then @prefs.site = @string.get(_("Gnudb server"),
+        'http://gnudb.gnudb.org/~cddb/cddb.cgi')
+      when 4 then @prefs.username = @string.get(_("Gnudb username"),
         'anonymous')
-      when 5 then @prefs.hostname = @string.get(_("Freedb hostname"),
+      when 5 then @prefs.hostname = @string.get(_("Gnudb hostname"),
         'my_secret.com')
       when 6 then @prefs.preferMusicBrainzCountries = @string.get(_("Prefer releases from countries (better, worse, ...)"),
         'US,UK,XW,XE,JP')
@@ -350,7 +350,7 @@ private
   
   def setMetadataProvider
     choices = [['none', _("Don't fetch metadata from the internet")],
-      ['freedb', _('Use the freedb protocol as primary resource')],
+      ['gnudb', _('Use the gnudb protocol as primary resource')],
       ['musicbrainz', _('Use the musicbrainz protocol as primary resource')]]
     @prefs.metadataProvider = multipleChoice(choices)
   end
